# LLM_Tool_Use

./: .gitignore  JustFile  README.md  config.yaml  pyproject.toml
HardwareApplication/: __init__.py  hardware.py
UI/: index.html  script.js  style.css
browser_control/: __init__.py  browser.py  models.py
mk_docs/: mkdocs.yml
mk_docs/docs/: about.md  architecture.md  features.md  index.md  introduction.md  setup.md
mk_docs/docs/setup/: configuration.md  installation.md
tool_use/: __init__.py  llm.py  models.py  tools.py
